--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="cartao_estilo.css">
+	<link rel="stylesheet" type="text/css" href="josefcabo.github.io/css/estilo_portifolio.css">
 	<meta name ="viewport" content="width-device, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="estilo_portifolio.css">
-	<link rel="stylesheet" type="text/css" href="habilidades_estilo.css">
+	<link rel="stylesheet" type="text/css" href="josefcabo.github.io/css/cartao_estilo.css">
+	<link rel="stylesheet" type="text/css" href="josefcabo.github.io/css/habilidades_estilo.css">
 	<link rel="stylesheet" type="text/css" href="script_portolio.js">
 </head>
 <body>
